{
  "version": 4,
  "terraform_version": "0.14.5",
  "serial": 178,
  "lineage": "984be3e0-8551-54e7-bab6-e0af512be127",
  "resources": [
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "swaps_api_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:422072214762:vpc/vpc-09d43583fe08a3835",
            "cidr_block": "180.10.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0f2abf58f54924596",
                "cidr_block": "180.10.0.0/16",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-6533790d",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-09d43583fe08a3835",
            "instance_tenancy": "default",
            "ipv6_association_id": "vpc-cidr-assoc-0773f3d7f8a61de69",
            "ipv6_cidr_block": "2a05:d01c:b19:dd00::/56",
            "main_route_table_id": "rtb-0fc3519f79d51e114",
            "owner_id": "422072214762",
            "state": "available",
            "tags": {
              "Creator": "Terraform",
              "Environment": "stg",
              "Name": "phe-stg-vpc",
              "Namespace": "phe",
              "Stage": "stg"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "swaps_compute_engine",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-05c424d59413a2876",
            "arn": "arn:aws:ec2:eu-west-2:422072214762:instance/i-03304adc51d919567",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-2b",
            "cpu_core_count": 48,
            "cpu_threads_per_core": 2,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-03304adc51d919567",
            "instance_state": "running",
            "instance_type": "c5.24xlarge",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0c021bc2bab1ddb16",
            "private_dns": "ip-180-10-26-229.eu-west-2.compute.internal",
            "private_ip": "180.10.26.229",
            "public_dns": "ec2-18-168-154-191.eu-west-2.compute.amazonaws.com",
            "public_ip": "18.168.154.191",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0ec23496532752163",
                "volume_size": 25,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b91c9993d40c17a0",
            "tags": {
              "Creator": "Terraform",
              "Environment": "stg",
              "Name": "swaps-cache-calculator",
              "Project": "Food Scanner"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0be9acf44b08b7b3c"
            ]
          },
          "dependencies": [
            "aws_security_group.swaps_compute_engine",
            "data.aws_subnet_ids.public",
            "data.template_file.compute_instance_user_data"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "swaps_api_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:422072214762:loadbalancer/app/swaps-api-load-balancer/8865b49586954cb8",
            "arn_suffix": "app/swaps-api-load-balancer/8865b49586954cb8",
            "dns_name": "swaps-api-load-balancer-1281386600.eu-west-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:eu-west-2:422072214762:loadbalancer/app/swaps-api-load-balancer/8865b49586954cb8",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "swaps-api-load-balancer",
            "security_groups": [
              "sg-0ff7a061a5dae4394"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0b91c9993d40c17a0"
              },
              {
                "subnet_id": "subnet-0c70cf70402b7cee4"
              }
            ],
            "subnets": [
              "subnet-0b91c9993d40c17a0",
              "subnet-0c70cf70402b7cee4"
            ],
            "tags": {
              "Creator": "Terraform",
              "Environment": "stg",
              "Project": "Food Scanner"
            },
            "vpc_id": "vpc-09d43583fe08a3835",
            "zone_id": "ZHURV8PSTC4K8"
          },
          "dependencies": [
            "aws_security_group.alb",
            "data.aws_subnet_ids.public",
            "data.aws_vpc.swaps_api_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:422072214762:listener/app/swaps-api-load-balancer/8865b49586954cb8/789a3e43c49bde65",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "#{host}",
                    "path": "/#{path}",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:422072214762:listener/app/swaps-api-load-balancer/8865b49586954cb8/789a3e43c49bde65",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-2:422072214762:loadbalancer/app/swaps-api-load-balancer/8865b49586954cb8",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.swaps_api_alb",
            "aws_security_group.alb",
            "data.aws_subnet_ids.public",
            "data.aws_vpc.swaps_api_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:422072214762:listener/app/swaps-api-load-balancer/8865b49586954cb8/6d0b68ad53015af4",
            "certificate_arn": "arn:aws:acm:eu-west-2:422072214762:certificate/6221f34c-adbe-4665-97de-ae0c297fbf01",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:422072214762:targetgroup/swaps-api-asg/ee80797003853778",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:422072214762:listener/app/swaps-api-load-balancer/8865b49586954cb8/6d0b68ad53015af4",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-2:422072214762:loadbalancer/app/swaps-api-load-balancer/8865b49586954cb8",
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.swaps_api_alb",
            "aws_lb_target_group.asg",
            "aws_security_group.alb",
            "data.aws_subnet_ids.public",
            "data.aws_vpc.swaps_api_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "asg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:422072214762:targetgroup/swaps-api-asg/ee80797003853778",
            "arn_suffix": "targetgroup/swaps-api-asg/ee80797003853778",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 15,
                "matcher": "200",
                "path": "/api/ping",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:422072214762:targetgroup/swaps-api-asg/ee80797003853778",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "swaps-api-asg",
            "port": 80,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-09d43583fe08a3835"
          },
          "dependencies": [
            "data.aws_vpc.swaps_api_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:422072214762:security-group/sg-0ff7a061a5dae4394",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ff7a061a5dae4394",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "swaps-api-alb",
            "name_prefix": "",
            "owner_id": "422072214762",
            "revoke_rules_on_delete": false,
            "tags": {
              "Creator": "Terraform",
              "Environment": "stg",
              "Project": "Food Scanner"
            },
            "timeouts": null,
            "vpc_id": "vpc-09d43583fe08a3835"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.swaps_api_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:422072214762:security-group/sg-06fbefd856490fc85",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06fbefd856490fc85",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "swaps-api",
            "name_prefix": "",
            "owner_id": "422072214762",
            "revoke_rules_on_delete": false,
            "tags": {
              "Creator": "Terraform",
              "Environment": "stg",
              "Project": "Food Scanner"
            },
            "timeouts": null,
            "vpc_id": "vpc-09d43583fe08a3835"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.swaps_api_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "swaps_compute_engine",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:422072214762:security-group/sg-0be9acf44b08b7b3c",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0be9acf44b08b7b3c",
            "ingress": [
              {
                "cidr_blocks": [
                  "180.10.0.0/16"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "swaps-cache-calculator",
            "name_prefix": "",
            "owner_id": "422072214762",
            "revoke_rules_on_delete": false,
            "tags": {
              "Creator": "Terraform",
              "Environment": "stg",
              "Project": "Food Scanner"
            },
            "timeouts": null,
            "vpc_id": "vpc-09d43583fe08a3835"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.swaps_api_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    }
  ]
}